[gd_scene load_steps=2 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]

[node name="StartMenu" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -63.0
margin_right = 111.0
margin_bottom = 63.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 222.0
margin_bottom = 126.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 222.0
margin_bottom = 20.0
text = "Start"

[node name="How to Play" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 222.0
margin_bottom = 44.0
text = "How to Play"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 222.0
margin_bottom = 68.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 222.0
margin_bottom = 92.0
text = "Quit"
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/How to Play" to="." method="_on_How_to_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
